--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+/* === TITULO CoreCloud === */
+.left-panel h1{
+  text-shadow: 0 0 12px var(--accent1);
+}
+
 /* === VARIABLES DEL TEMA (IGUALES AL DISEÑO ORIGINAL) === */
 :root{
   --bg1: #0b0216;
@@ -150,6 +155,7 @@ input:focus, select:focus{
     margin-bottom:25px;
   }
 }
+
 
 
 
