--- a/css/cotizar-user.css
+++ b/css/cotizar-user.css
@@ -93,7 +93,7 @@ body{
 
 .nav a.active {
     /* Usamos el color de acento principal para el item activo */
-    background: var(--accent2);
+    background: #a855f7;
     color: white;
     box-shadow: 0 0 12px #a855f7;
 }
