--- a/css/cotizar-user.css
+++ b/css/cotizar-user.css
@@ -209,6 +209,13 @@ hr {
     margin: 25px 0;
 }
 
+/* DESPLEGABLE */
+select option {
+    background-color: var(--bg2); 
+    color: var(--text); 
+    padding: 5px;
+}
+
 /* =========================
       BOTONES
 ========================= */
